2011-03-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: SAT has control over Joiner.
	* src/network/JoinThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/ConcurrentMessageDispatcher.h: Change to
	send/receive AskNextNotification between SAT and Joiner.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/network/ConcurrentMessageQueueFactory.h: Likewise.

2011-03-28  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Wait for message from SAT and will compute just 1 join at a time.

	* include/solver/RelSatSolver.h: Solve based on parameters from RelSatSolverThread.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/RelSatSolverThread.h: Take care of the message from Handler.
	* src/network/RelSatSolverThread.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/Handler.tcc: Notify SAT instead of Joiner about the up coming message.

	* include/network/ConcurrentMessageQueueFactory.h: Add MQ for SAT to notify Joiner.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.

	* include/network/ConcurrentMessageDispatcher.h: Add methods for
	sending/receiving BaseNotification.
	* src/network/ConcurrentMessageDispaicher.cpp: Likewise.
	* include/network/MessagingGateway.h: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.

	* include/dmcs/BaseNotification.h: Add SHUTUP type.

2011-03-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/AskNextNotification.h: Only use integers for path now.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/NeighborThread.h: Likewise.